PharmaDemo/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Complex</fullName>
        <description>Complex Case</description>
        <isActive>false</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Simple</fullName>
        <description>Simple Case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Adverse_Event_Current_Status__c</fullName>
        <label>Adverse Event Current Status</label>
        <picklist>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worsened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <picklist>
            <controllingField>Operating_System__c</controllingField>
            <picklistValues>
                <fullName>IE 5.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE 6.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE 7.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firefox 1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firefox 1.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firefox 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safari 3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opera 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netscape 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netscape 8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bugzilla__c</fullName>
        <label>Bugzilla #</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Age_Hrs__c</fullName>
        <formula>IF( IsClosed, ROUND((ClosedDate - CreatedDate) *24 ,0), ROUND((NOW() - CreatedDate) * 24 ,0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Area__c</fullName>
        <label>Case Area</label>
        <picklist>
            <picklistValues>
                <fullName>Invoicing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Routing__c</fullName>
        <label>Case Routing</label>
        <picklist>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General/Technical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Contact.MailingCity</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concomitant_Medical_Products__c</fullName>
        <label>Concomitant Medical Products</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Congenital_anomaly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Congenital anomaly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small and Medium Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_adverse_event_ended__c</fullName>
        <label>Date adverse event ended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_adverse_event_started__c</fullName>
        <label>Date adverse event started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_event_reported_to_Novartis_employee__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date event reported to Novartis employee</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Death__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demand_For_Feature__c</fullName>
        <label>Demand For Feature</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Describe_event_any_necessary_treatment__c</fullName>
        <label>Describe event &amp; any necessary treatment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dose__c</fullName>
        <label>Dose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <formula>CreatedBy.FirstName &amp;&quot; &quot;&amp;CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Phone__c</fullName>
        <formula>CreatedBy.Phone &amp;&quot; x. &quot;&amp; CreatedBy.Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engineering Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feature_Description__c</fullName>
        <label>Feature Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Date__c</fullName>
        <label>Feature Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handling_Method__c</fullName>
        <label>Handling Method</label>
        <picklist>
            <picklistValues>
                <fullName>White Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hardware__c</fullName>
        <label>Hardware</label>
        <picklist>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospitalization_initial_or_prolonged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hospitalization - initial or prolonged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <label>Indication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Indicator__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, VALUE(LEFT(TEXT(Knowledge__c),1))  * 20) &amp; 
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, (5 - VALUE(LEFT( TEXT(Knowledge__c),1))) * 20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Knowledge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge__c</fullName>
        <label>Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Very Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Very Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Payment__c</fullName>
        <label>Last Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lifethreatening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Life-threatening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lot_No__c</fullName>
        <label>Lot No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_History_LabTest_data__c</fullName>
        <label>Medical History &amp; Lab/Test data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Question__c</fullName>
        <label>Medical Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating System</label>
        <picklist>
            <controllingField>Hardware__c</controllingField>
            <picklistValues>
                <fullName>Windows Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows XP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 95</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac 0S X 10.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac 0S X 10.4 (Tiger)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac 0S X 10.5 (Leopard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FreeBSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP-UX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_Initials__c</fullName>
        <label>Patient Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Billing__c</fullName>
        <label>Payment Billing</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Please_Specify__c</fullName>
        <label>Please Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <picklist>
            <controllingField>Case_Area__c</controllingField>
            <picklistValues>
                <fullName>Wrong Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Total on Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Funds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Family_KB__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>PharmaProduct__c</referenceTo>
        <relationshipLabel>Queries</relationshipLabel>
        <relationshipName>Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Professionalism_Indicator__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, VALUE(LEFT(TEXT(Professionalism__c),1)) * 20) &amp;
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, (5 - VALUE(LEFT( TEXT(Professionalism__c),1))) * 20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Professionalism</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professionalism__c</fullName>
        <label>Professionalism</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Very Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Very Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_intervention__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required intervention to prevent permanent impairment/damage</inlineHelpText>
        <label>Required intervention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Indicator__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, VALUE(LEFT(TEXT(Resolution__c),1)) * 20) &amp;
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, (5 - VALUE(LEFT( TEXT(Resolution__c),1))) * 20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Very Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Very Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <formula>CASE( MOD(VALUE( CaseNumber ),3), 0, &quot;Queue 1&quot;, 1, &quot;Queue 2&quot;, 2, &quot;Queue 3&quot;, &quot;Invalid ID&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_of_Admin__c</fullName>
        <label>Route of Admin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Score__c</fullName>
        <label>Satisfaction Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send__c</fullName>
        <label>Send</label>
        <picklist>
            <picklistValues>
                <fullName>Post Centrally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Locally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <picklist>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fedex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Number__c</fullName>
        <formula>CASE( Shipping_Method__c , &quot;Fedex&quot;, HYPERLINK(&quot;http://www.fedex.com/Tracking?cntry_code=us&amp;tracknumbers=&quot;&amp; Tracking_ID__c,&quot;Track&quot;),  &quot;UPS&quot;, HYPERLINK(&quot;http://wwwapps.ups.com/WebTracking/processInputRequestHTMLVersion=5.0&amp;sort_by=status&amp;loc=en_US&amp;InquiryNumber1=&quot;&amp; Tracking_ID__c &amp; &quot;&amp;track.x=32&amp;track.y=7&quot;, &quot;Track&quot;), &quot;DHL&quot;, HYPERLINK (&quot;http://track.dhl-usa.com/TrackByNbr.asp?ShipmentNumber=&quot; &amp; Tracking_ID__c,&quot;Track&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Track It</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Request_Category__c</fullName>
        <label>Special Request Category</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Trial related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker Event related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grants related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Contact.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IMAGE(CASE( Priority, &quot;Medium&quot;, &quot;/img/samples/light_yellow.gif&quot;, &quot;Low&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;High&quot;, &quot;/img/samples/light_red.gif&quot;,&quot;/img/samples/light_red.gif&quot;),&quot;Current Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Technical Question</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>System Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End-User-Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Admin Guide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suspect_Products__c</fullName>
        <label>Suspect Product(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Exelon Patch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producct 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapy_Date_From__c</fullName>
        <label>Therapy Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Therapy_Date_To__c</fullName>
        <label>Therapy Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tied_to_revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tied to revenue?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeliness_Indicator__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, VALUE(LEFT(TEXT(Timeliness__c),1)) * 20) &amp;
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, (5 - VALUE(LEFT( TEXT(Timeliness__c),1))) * 20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timeliness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeliness__c</fullName>
        <label>Timeliness</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Very Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Very Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>CreatedBy.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_ID__c</fullName>
        <label>Tracking ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Again_Indicator__c</fullName>
        <formula>IF( TEXT(Use_Again__c) = &quot;Yes&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, 100), IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use Again</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Again__c</fullName>
        <label>Use Again</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_of_Deal__c</fullName>
        <label>Value of Deal</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>cv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>twitterforce__twitterId__c</fullName>
        <label>twitterId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>Professionalism_Indicator__c</columns>
        <columns>Knowledge_Indicator__c</columns>
        <columns>Timeliness_Indicator__c</columns>
        <columns>Use_Again_Indicator__c</columns>
        <columns>Resolution_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Closed Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Queries</label>
        <language>en_US</language>
        <queue>UKQueue</queue>
    </listViews>
    <recordTypes>
        <fullName>Simple</fullName>
        <active>true</active>
        <businessProcess>Simple</businessProcess>
        <description>Query that can be answered using FAQs and knowledgebase</description>
        <label>Simple</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>